Update the Format of project

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
                                         </div>
                                         <div class="category form-category">
                                         <div class="form-footer text-right">
-                                            <button type="submit" class="btn btn-primary btn-fill d-flex ml-auto"><i class="material-icons mr-3">group_add</i> Register</button>
+                                            <button type="submit" class="btn btn-primary btn-fill d-flex ml-auto"><i class="material-icons mr-3">group_add</i> Submit</button>
                                         </div>
                                     </div>
                                     </div>
